# PyTimeVar

./: .readthedocs.yaml  README.md
PyTimeVar/: README.md  ReplicateSection3.ipynb  Replication_code_section3.py  Replication_code_section4.py  Replication_code_simulation.py  ThesisIllustrations.ipynb  compare.py  pyproject.toml  replicateSection3.py  setup.py  test_confidencebands.py  test_trend.py
PyTimeVar/PyTimeVar/: __init__.py
PyTimeVar/PyTimeVar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PyTimeVar/PyTimeVar/PyTimeVar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PyTimeVar/PyTimeVar/bhpfilter/: bHP.py
PyTimeVar/PyTimeVar/breaks/: breaks.py
PyTimeVar/PyTimeVar/datasets/: __init__.py  utils.py
PyTimeVar/PyTimeVar/datasets/co2/: Emissions_19002017.csv  co2.csv  data.py
PyTimeVar/PyTimeVar/gas/: GAS.py  GAS_NT.ipynb
PyTimeVar/PyTimeVar/kalman/: kalman.py
PyTimeVar/PyTimeVar/locallinear/: LLR.py
PyTimeVar/PyTimeVar/markov/: markov.py
PyTimeVar/PyTimeVar/powerlaw/: pwr.py
PyTimeVar/docs/: PyTimeVar.datasets.gold.rst  PyTimeVar.datasets.rst  PyTimeVar.datasets.temperature.rst  PyTimeVar.kalman.rst  PyTimeVar.powerlaw.rst  PyTimeVar.rst  conf.py  index.rst  modules.rst  requirements.txt
PyTimeVar/docs/_build/html/: .buildinfo  (+21 more)
PyTimeVar/tests/: compare.py  replicateSection3.py  test_timevarmodels.py
PyTimeVar/timevarmodels/: __init__.py
PyTimeVar/timevarmodels/bhpfilter/: bHP.py
PyTimeVar/timevarmodels/datasets/: __init__.py  utils.py
PyTimeVar/timevarmodels/gas/: GAS_NT.ipynb  nGAS.py  tGAS.py
PyTimeVar/timevarmodels/kalman/: Kalman_filter_smoother(no estimation part).py  kalman.py
PyTimeVar/timevarmodels/locallinear/: LLR.py
(+66 files in other folders)
