[tool.poetry]
name = "PyTimeVar"
version = "0.0.2"
description = "A Python package for Trending Time-Varying Time Series Models"
authors = ["Mingxuan Song <678270ms@eur.nl>", "Bernhard van der Sluis <vandersluis@ese.eur.nl>","Yicong Lin <yc.lin@vu.nl>"]
maintainers = ["Mingxuan Song <678270ms@eur.nl>", "Bernhard van der Sluis <vandersluis@ese.eur.nl>"]
readme = "README.md"

[tool.poetry]
name = PyTimeVar

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
